--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>cardmaker</title>
+    <title>Cardmaker</title>
+
+    <!-- Either include the full CamanJS code including plugins -->
+    <script type="text/javascript" src="/static/lib/camanjs/caman.full.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
